adopt full potential of spring-cloud-azure-starter-storage-blob